--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mssql": "^11.0.1",
     "razorpay": "^2.9.6",
     "uuid": "^13.0.0"
   },
